Added link to EDS

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -40,7 +40,7 @@
                     <li>try searching by ERN</li>
                 }
             </ul>
-            <p class="no-employers-optional-action">If you can't find the employer you wish to link to, login to EDS to request an ERN</p>
+            <p class="no-employers-optional-action">If you can't find the employer you wish to link to, login to <a href="https://edrs.lsc.gov.uk/" target="_blank">EDS</a> to request an ERN</p>
         </div>
     }
 
