--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -33,7 +33,7 @@
                 }
                 @if (!string.IsNullOrWhiteSpace(nameAndLocationSearchSelected))
                 {
-                    <li>check the name or location are correct</li>
+                    <li>check the employer name or location are correct</li>
                     <li>try searching by ERN</li>
                 }
             </ul>
