--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -36,16 +36,16 @@
                 }
                 @if (!string.IsNullOrWhiteSpace(nameAndLocationSearchSelected))
                 {
-                    <li>check the name or location are correct</li>
+                    <li>check the employer name or location are correct</li>
                     <li>try searching by ERN</li>
                 }
             </ul>
-            <p class="no-employers-optional-action">If you can't find the employer you wish to link to, login to <a href="https://edrs.lsc.gov.uk/" target="_blank">EDS</a> to request an ERN</p>
+            <p class="no-employers-optional-action">If you can't find the employer you wish to link to, login to <a href="https://edrs.lsc.gov.uk/security/login.aspx" target="_blank">EDS</a> to request an ERN</p>
         </div>
     }
 
     <div class="blocklabel-single-container">
-        <h2 class="heading-small">Search your employers</h2>
+        <h2 class="heading-small">Search for an employer</h2>
         <div class="form-group inline clearfix blocklabel-single hide-nojs">
             @* ReSharper disable once Html.IdNotResolved *@
             <label data-target="name-location-search-panel" for="name-location-search" class="block-label @nameAndLocationSearchSelected">
