Display submission count on QA dashboard

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -56,10 +56,10 @@
                                 <tr>
                                     <th>Title</th>
                                     <th>Reference</th>
-                                    <th>Status</th>
                                     <th>Provider</th>
                                     <th>Date submitted</th>
                                     <th>Closing date</th>
+                                    <th>Submission count</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -74,9 +74,6 @@
                                         <span>@vacancy.VacancyReferenceNumber.GetVacancyReference()</span>
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(model => vacancy.Status)
-                                    </td>
-                                    <td>
                                         <span>@vacancy.ProviderName</span>
                                     </td>
                                     <td>
@@ -84,6 +81,9 @@
                                     </td>
                                     <td>
                                         <span>@vacancy.ClosingDate.ToFriendlyClosingToday()</span>
+                                    </td>
+                                    <td>
+                                        <span>@vacancy.SubmissionCount</span>
                                     </td>
                                     <td>
                                         @if (vacancy.CanBeReservedForQaByCurrentUser)
