Centering submission count and fixing last submitted date

--- a/src/SFA.Apprenticeships.Web.Common/Views/Shared/DisplayTemplates/Date.cshtml
+++ b/src/SFA.Apprenticeships.Web.Common/Views/Shared/DisplayTemplates/Date.cshtml
@@ -1,6 +1,3 @@
-﻿@model DateTime
-@{
-    var timeZoneInfo = TimeZoneInfo.FindSystemTimeZoneById("GMT Standard Time");
-    var dataTimeByZoneId = TimeZoneInfo.ConvertTime(Model.ToUniversalTime(), timeZoneInfo);
-}
-@dataTimeByZoneId.ToString("dd MMM yyyy")
+﻿@using SFA.Apprenticeships.Infrastructure.Presentation
+@model DateTime
+@Model.ToGmtDate();
