Display warnings on possible start date correctly and fixed links in validation summary for VacancyDatesViewModel fields.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -39,7 +39,7 @@
             @foreach (var modelKey in Model.Keys)
             {
                 var modelState = Model[modelKey];
-                var elementId = ViewData.TemplateInfo.GetFullHtmlFieldId(modelKey).Replace("_", ".");
+                var elementId = ViewData.TemplateInfo.GetFullHtmlFieldId(modelKey);
 
                 var anyError = modelState.Errors.Any(modelError => modelError.GetType() == typeof (ModelError));
                 foreach (var modelError in modelState.Errors)
