--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
@@ -1,3 +1,6 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
-    
-<a href="@Model.EditUrl" class="edit-comment-link">Edit/Comment</a>
+
+@if (Model.Status.IsStateEditable())
+{
+    <a href="@Model.EditUrl" class="edit-comment-link">Edit/Comment</a>
+}
