--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
@@ -1,7 +1,6 @@
-﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
     
-@if (Model.HasComment && Model.Status != ProviderVacancyStatuses.Live)
+@if (Model.HasComment && Model.Status.IsStateEditable())
 {
     <a href="@Model.ViewCommentUrl"><i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i></a>
 }
