--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
@@ -1,7 +1,6 @@
-﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
 
-@if (Model.Status != ProviderVacancyStatuses.Live)
+@if (Model.Status.IsStateEditable())
 {
     var linkText = Model.CommentViewModel.HasComment ? "Edit/View feedback" : "Edit";
     <a href="@Model.EditUrl" class="edit-comment-link">@linkText</a>
