--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
+@using SFA.Apprenticeships.Web.Recruit.Constants
 @using SFA.Apprenticeships.Web.Recruit.ViewModels.Application
 @using SFA.Apprenticeships.Web.Recruit.ViewModels.Application.Apprenticeship
 @model VacancyApplicationsViewModel
@@ -38,9 +39,12 @@
                     </div>
                 </div>
                 <div class="grid grid-1-3">
-                    <p class="small-btm-margin">
-                        @Html.RouteLink("Manage vacancy dates", RecruitmentRouteNames.ManageDates, new { vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber }, new { @class = "disp-block" })
-                    </p>
+                    @if (Model.Status != ProviderVacancyStatuses.Completed)
+                    {
+                        <p class="small-btm-margin">
+                            @Html.RouteLink("Manage vacancy dates", RecruitmentRouteNames.ManageDates, new {vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber}, new {@class = "disp-block"})
+                        </p>
+                    }
                     <p class="small-btm-margin">
                         <a href="">Withdraw</a>
                     </p>
